--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "ui"
   ],
   "license": "MIT",
-  "repository": "https://github.com/MarcosBessega/Wrath-of-Nature-ui",
+  "repository": "git@github.com:MarcosBessega/Glacier-Green-ui.git",
   "main": "lib/main",
   "engines": {
     "atom": ">0.40.0"
